ICTS rollback now seems to work (more testing needed)
ICTS now adds parent to the solution MAPFStates, which is needed to keep track of whence it came